0.5-just-ec2-userdata.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description: >
  Este es mi tercer YAML 
  para cloudformation en la nube de AWS

#Parametros de entrada para el cloudformation
Parameters:
  VPCpeParameter:
    Type: String
    Default: "vpc-0387a2c81ea5d1966"
  ImagepeParameter:
    Type: String
    Default: "ami-0453898e98046c639"
  KeyNamepeParameter:
    Type: String
    Default: "keyPrueba"
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.micro
      - t3.small
    Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.

# Salidas del cloudformation, notificando que todo esta bien
Outputs:
  IDInstancia:
    Description: ID de la instancia que hemos creado
    Value: MyInstanceEC2

# Recursos que se van creando.
Resources:
# Instancia EC2 creada
  MyInstanceEC2:
    Type: AWS::EC2::Instance
    Properties:
      AvailabilityZone: us-east-1a
      ImageId: !Ref ImagepeParameter
      KeyName: !Ref KeyNamepeParameter
      InstanceType: !Ref InstanceTypeParameter
      BlockDeviceMappings:
        - DeviceName: /dev/xvda
          Ebs:
            VolumeType: gp2
            VolumeSize: '10'
            DeleteOnTermination: 'false'
            Encrypted: 'true'
      SecurityGroupIds: 
        - Ref: SecurityGroupSSH
      UserData: 
        Fn::Base64: !Sub |
          #!/bin/bash
          yum update -y
          yum install -y httpd
          systemctl start httpd
          systemctl enable httpd
          echo "<h1>Hola Mundo desde $(hostname -f)</h1>" > /var/www/html/index.html

  SecurityGroupSSH:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: "SSH security group"
      GroupName: "SSH security group"
      VpcId: !Ref VPCpeParameter
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
