0.9-just-ec2-elasticIP-ImageDockerJenkins-red.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: >
  Este es mi primer arquitectura de red con YAML 
  para cloudformation en la nube de AWS

Mappings:
  AWSRegionToAMI:
    us-east-1:
      AMIID: ami-0b33d91d
    us-east-2:
      AMIID: ami-c55673a0

#Parametros de entrada para el cloudformation
Parameters:
  ImagepeParameter:
    Type: String
    Default: "ami-053b0d53c279acc90"
  KeyNamepeParameter:
    Type: String
    Default: "keyPrueba"
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.micro
      - t3.small
    Description: Enter t2.micro, m1.small, or m1.large. Default is t2.micro.


# Salidas del cloudformation, notificando que todo esta bien
Outputs:
  IDInstancia:
    Description: ID de la instancia que hemos creado
    Value: MyInstanceEC2

# Recursos que se van crear.
Resources:
  # Crea la VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.71.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
      - Key: Name
        Value: VPC_Jenkins

  # Crea la Subnet
  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1c
      CidrBlock: 10.71.3.0/24
      MapPublicIpOnLaunch: true
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: Subnet_Jenkins

  # Crea InternetGateway      
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: IGW_Jenkins
  # Atacha el internetgatway 
  AttachIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: InternetGateway
  # Se agrega una VPC a una route table
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
      - Key: Name
        Value: RT_Jenkins
  
  PublicOutboundRule:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway
      RouteTableId:
        Ref: RouteTable
  # Se agrega la subnet a una route table
  SubnetAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: RouteTable
      SubnetId:
        Ref: Subnet

  
# Instancia EC2 creada
  MyInstanceEC2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ImagepeParameter
      KeyName: !Ref KeyNamepeParameter
      InstanceType: !Ref InstanceTypeParameter
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeType: gp2
            VolumeSize: '10'
            DeleteOnTermination: 'true'
            Encrypted: 'true'
      SecurityGroupIds: 
        - Ref: SSHSecurityGroup
        - Ref: ServerSecurityGroup
        - Ref: JenkinsSecurityGroup
      SubnetId:
        Ref: Subnet
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          sudo apt update -y
          sudo apt install apt-transport-https ca-certificates curl software-properties-common -y
          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
          sudo apt update -y
          apt-cache policy docker-ce
          sudo apt install docker-ce -y
          sudo docker pull jenkins/jenkins:latest
          sudo docker run -d --name myjenkins -p 8080:8080 -p 50000:50000 --restart=on-failure jenkins/jenkins:latest
      Tags:
        - Key: Name
          Value: Servidor_Jenkins


# nuestro grupo de seguridad EC2 SSH
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Habilita el acceso SSH a traves del puerto 22
      GroupName: "SSH security group"
      VpcId: 
        Ref: VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
          Description: SSH
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
          Description: Salida todo trafico
      Tags:
        - Key: Name
          Value: SG_Puertos_SSH

  # nuestro segundo grupo de seguridad EC2 HTTP y HTTPS
  ServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Grupo de seguridad para el servidor
      GroupName: "SERVER security group" 
      VpcId: 
        Ref: VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
          Description: HTTP
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
          Description: HTTPS
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
          Description: Salida todo trafico
      Tags:
        - Key: Name
          Value: SG_Puertos_HTTP_HTTPS

  # nuestro segundo grupo de seguridad EC2 Jenkins
  JenkinsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Grupo de seguridad para los puestos de jenkins
      GroupName: "JENKINS security group" 
      VpcId: 
        Ref: VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0
          Description: Puerto Jenkins
        - IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          CidrIp: 0.0.0.0/0
          Description: Puerto Agent Jenkins
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0
          Description: Salida todo trafico
      Tags:
        - Key: Name
          Value: SG_Puertos_Jenkins
